--- a/src/main/index.html
+++ b/src/main/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>My Project</title>
-    <link rel="stylesheet" href="../../../dist/bundle.css">
+    <link rel="stylesheet" href="../../dist/bundle.css">
 
-    <script src="../../../dist/browserified/room-showcase.js"></script>
+    <script src="../../dist/browserified/room-showcase.js"></script>
 </head>
 <body>
 <div class="view-container">
